Revised Annona figure rule for Orbit captions

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1684,6 +1684,7 @@ figcaption.orbit-caption.caption p {
     /*Added for Annona*/ 
     font-style: initial;
     font-weight: initial;
+    font-size: initial;
     @include breakpoint(large) {
         margin-bottom: $global-margin;
         text-align: right;
