--- a/view/common/block-layout/resource-text-container.phtml
+++ b/view/common/block-layout/resource-text-container.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text grid-x grid-padding-x medium-padding-1 align-spaced full-width-css">
+<div class="block media-text grid-x grid-padding-x medium-padding-1 align-spaced">
     <?php if (!empty($heading)): ?>
     <div class="media-text-heading">
         <h2><?= $escape($heading) ?></h2>
