Revised reference text to match style guide

--- a/view/common/block-layout/item-showcase-no-image.phtml
+++ b/view/common/block-layout/item-showcase-no-image.phtml
@@ -45,7 +45,7 @@
                     $identifier = $item->value('dcterms:identifier');
                     if ($identifier):
                     ?>
-                    <h3 class="h4 identifier padding-horizontal-1 xlarge-padding-horizontal-2 xlarge-padding-horizontal-3"><small><?php echo 'Reference ' . $identifier; ?></small></h3>
+                    <h3 class="h4 identifier padding-horizontal-1 xlarge-padding-horizontal-2 xlarge-padding-horizontal-3"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
                     <?php endif; ?>
                 </div>
 
