--- a/view/common/block-layout/item-showcase-multiples-keep-ratio.phtml
+++ b/view/common/block-layout/item-showcase-multiples-keep-ratio.phtml
@@ -37,7 +37,7 @@
                     $identifier = $item->value('dcterms:identifier');
                     if ($identifier):
                     ?>
-                    <h3 class="h4"><small><?php echo 'Reference ' . $identifier; ?></small></h3>
+                    <h3 class="h4"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
                     <?php endif; ?>
                 </div>
 
