--- a/view/common/block-layout/item-showcase-single.phtml
+++ b/view/common/block-layout/item-showcase-single.phtml
@@ -51,7 +51,7 @@
                     $identifier = $item->value('dcterms:identifier');
                     if ($identifier):
                     ?>
-                    <h3 class="h4 identifier"><small><?php echo 'Reference ' . $identifier; ?></small></h3>
+                    <h3 class="h4 identifier"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
                     <?php endif; ?>
                 </div>
 
