Changed .left and .right media file widths

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1107,7 +1107,7 @@ a.resource-link img {
     margin: 0 $global-margin $global-margin 0;
     max-width: 40%;
     @include breakpoint(small down) {
-        max-width: 25%;
+        max-width: 50%;
     }
 }
 
@@ -1115,8 +1115,8 @@ a.resource-link img {
     float: right;
     margin: 0 0 $global-margin $global-margin;
     max-width: 40%;
-    @include breakpoint(small down) {
-        max-width: 25%;
+    @include breakpoint(medium down) {
+        max-width: 50%;
     }
 }
 
