Revised max item height Item Showcase

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -2968,7 +2968,8 @@ ul.language-switcher.locale-code li span.active {
 }
 
 /*Maximum image height for Item Showcase Block*/ 
-figure.max-height img {
+figure.max-image-height img,
+.max-image-height img {
     max-height: 85vh;
 }
 
