--- a/view/common/block-layout/item-showcase-grid-metadata-full-width.phtml
+++ b/view/common/block-layout/item-showcase-grid-metadata-full-width.phtml
@@ -1,6 +1,6 @@
-<div id="block-<?php echo $this->blockId; ?>" class="full-width-css col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
+<div class="full-width-css col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php foreach ($attachments as $attachment): ?>
-        <div class="max-height item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
+        <div class="max-image-height item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
             <?php
             $item = $attachment->item();
             if ($item):
