--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -1,7 +1,7 @@
 <div class="<?php echo $this->alignmentClass . ' ' . $this->thumbnailType; ?> file">
     <div class="attachments">
 <?php foreach($this->attachments as $attachment): ?>
-    <div class="item resource">
+    <div class="item resource max-image-height">
     <?php
     $item = $attachment->item();
     if ($item):
