--- a/view/common/block-layout/media-single.phtml
+++ b/view/common/block-layout/media-single.phtml
@@ -8,10 +8,7 @@ $this->headLink()->appendStylesheet($assetUrl('css/style.css', 'PageBlocks'));
 <section class="col-container col-media-container">
     <div class="col-single">
         <?php foreach ($attachments as $attachment) {
-            echo $attachment->media()->render([
-                'hideTranscript' => false,
-                'compactMode' => true,
-            ]);
+            echo $attachment->media()->render();
         } ?>
     </div>
     <div class="col-single">
