Updated media single Block

--- a/asset/scss/_globals-default.scss
+++ b/asset/scss/_globals-default.scss
@@ -4,7 +4,7 @@ $global-width: rem-calc(1140);
 $global-lineheight: 1.5;
 $foundation-palette: ( primary: #660099, secondary: #2c0142, success: #3adb76, warning: #FFCC33, alert: #c91b00);
 $light-gray: #ececed;
-$medium-gray: #cacaca;
+$medium-gray: #8a8a8a;
 $dark-gray: #393a3c;
 $uom-footer: #1d1d1d;
 $black: #0a0a0a;
