--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -74,7 +74,7 @@ if ($galleryDisplay) {
 
 <?php endif; ?>
 
-<div id="resource-values" class="lead <?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
+<div id="resource-values" class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
     <?php echo $item->displayValues(); ?>
     <?php $itemSets = $item->itemSets(); ?>
