--- a/view/common/block-layout/legacy-blocks/resource-text-image-cover-dark.phtml
+++ b/view/common/block-layout/legacy-blocks/resource-text-image-cover-dark.phtml
@@ -21,14 +21,14 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block full-width-css grid-x grid-padding-x background-colour-uom-footer margin-bottom-1 flex-container image-cover">
+<div class="block full-width-css grid-x grid-padding-x margin-bottom-1 flex-container image-cover background-colour-uom-footer region-splash">
     <?php if (!empty($heading)): ?>
     <div class="grid-container cell margin-bottom-1">
     <h3><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-7">
-        <div class="attachments">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6 flex-container">
+        <div class="attachments flex-container">
         <?php
             foreach ($attachments as $attachment):
                 $render = null;
@@ -80,7 +80,7 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text background-colour-uom-footer large-5 flex-container flex-dir-column align-center padding-1">
+    <div class="resource-text large-6 flex-container grid-y grid-padding-y flex-dir-column align-middle align-center font-wide padding-1 xlarge-padding-2">
     <div class="metadata margin-bottom-1 separator-center">
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == 'item_title'): ?>
@@ -110,5 +110,5 @@ $lang = $filterLocale ? $this->lang() : null;
       <h3 class="h4"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
       <?php endif; ?>
     </div>
-</div>
+    </div>
 </div>
