--- a/view/common/block-layout/resource-text-image-cover.phtml
+++ b/view/common/block-layout/resource-text-image-cover.phtml
@@ -80,7 +80,7 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text large-5 flex-container flex-dir-column align-center padding-1">
+    <div class="resource-text large-5 flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3">
     <div class="metadata margin-bottom-1 separator-center">
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == 'item_title'): ?>
