--- a/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
@@ -78,7 +78,7 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text large-7 flex-container flex-dir-column align-center padding-1">
+    <div class="resource-text large-7 flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3">
     <div class="metadata margin-bottom-1 separator-center">
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == 'item_title'): ?>
