Revised Resource with Text Headings

--- a/view/common/block-layout/resource-text-image-cover-portrait.phtml
+++ b/view/common/block-layout/resource-text-image-cover-portrait.phtml
@@ -24,7 +24,7 @@ $lang = $filterLocale ? $this->lang() : null;
 <div class="block full-width-css grid-x grid-padding-x background-colour-uom-footer margin-bottom-1 flex-container image-cover">
     <?php if (!empty($heading)): ?>
     <div class="grid-container cell margin-bottom-1">
-    <h3><?= $escape($heading) ?></h3>
+        <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
     <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6 flex-container">
