--- a/view/common/block-layout/resource-text-metadata-full-width-dark.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width-dark.phtml
@@ -24,7 +24,7 @@ $lang = $filterLocale ? $this->lang() : null;
 <div class="block media-text grid-x grid-padding-x full-width-css medium-padding-1 align-spaced background-colour-uom-footer region-splash">
     <?php if (!empty($heading)): ?>
     <div class="media-text-heading">
-        <h2><?= $escape($heading) ?></h2>
+        <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
     <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-7 flex-container align-spaced medium-padding-right-1 large-padding-right-0 large-padding-top-1">
