--- a/view/common/block-layout/resource-text-video-16_9.phtml
+++ b/view/common/block-layout/resource-text-video-16_9.phtml
@@ -24,7 +24,7 @@ $lang = $filterLocale ? $this->lang() : null;
 <div class="block full-width-css media-text grid-x grid-padding-x full-width-css padding-1-medium-up align-spaced">
     <?php if (!empty($heading)): ?>
     <div class="media-text-heading">
-    <h2><?= $escape($heading) ?></h2>
+    <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
     <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container flex-dir-column align-center">
