--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -40,10 +40,10 @@ if ($galleryDisplay) {
 <h3 class="label"><?php echo $translate('Item'); ?></h3>
 </div>
 
-<div class="grid-x">
+<div class="grid-x full-width-css">
 <?php if ($galleryDisplay): ?>
     <?php if ((count($iiifMedia) > 0) || (count($imageMedia) > 0)): ?>
-        <div id="itemfiles" class="<?php echo $mediaDisplay; ?>">
+        <div id="itemfiles" class="large-padding-horizontal-2 xlarge-padding-horizontal-3 <?php echo $mediaDisplay; ?>">
             <?php echo $this->mirador($item); ?>
         </div>
     <?php elseif (strpos($mediaRenderer, 'youtube') !== false): ?>
@@ -74,7 +74,7 @@ if ($galleryDisplay) {
 
 <?php endif; ?>
 
-<div id="resource-values" class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
+<div id="resource-values" class="padding-horizontal-1 large-padding-horizontal-0 large-padding-right-1 <?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
     <?php echo $item->displayValues(); ?>
     <?php $itemSets = $item->itemSets(); ?>
