Updated to version 4.0
Removed changes to default Omeka SASS file, transferred to Sea Foam instead.

--- a/asset/scss/_globals-seafoam.scss
+++ b/asset/scss/_globals-seafoam.scss
@@ -1,11 +1,10 @@
 @import "util/util";
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 $foundation-palette: (
-  primary: #007a76,
-  secondary: #c5f4f2,
-  success: #3adb76,
-  warning: #ffae00,
-  alert: #cc4b37,
+  primary: #660099, 
+  secondary: #2c0142, 
+  success: #3adb76, 
+  warning: #FFCC33, 
+  alert: #c91b00
 );
 $body-font-family: 'Open Sans', sans-serif;
