--- a/view/common/header-dropdown.phtml
+++ b/view/common/header-dropdown.phtml
@@ -16,12 +16,8 @@
 </div>
 <div class="top-bar">
     <div class="top-bar-left">
-        <?php if ($this->themeSetting('logo')): ?>
-        <a href="<?php echo $site->url(); ?>" class="site-title"><img
-                src="<?php echo $this->themeSettingAssetUrl('logo'); ?>" title="Logo"></a>
-        <?php else: ?>
-        <a href="<?php echo $site->url(); ?>" class="site-title"><?php echo $this->pageTitle($site->title()); ?></a>
-        <?php endif; ?>
+        <?php $siteLogo = ($this->themeSetting('logo')) ? '<img src="' . $this->themeSettingAssetUrl('logo') . '" title="Logo" alt="">' : ''; ?>
+            <h1 class="site-title"><a href="<?php echo $site->url(); ?>"><?php echo $siteLogo; ?><span class="site-title-label <?php echo ($siteLogo !== '') ? 'sr-only' : ''; ?>"><?php echo $site->title(); ?></span></a></h1> 
         </div>
     <div class="top-bar-right" id="responsive-menu">
         <?php echo $site->publicNav()->menu()->setPartial('common/foundation-navigation.phtml')->renderPartialWithParams(['layout' => 'dropdown']); ?>
