--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -1,127 +1,72 @@
 <?php
 $translate = $this->plugin('translate');
 $escape = $this->plugin('escapeHtml');
+$this->headLink()->appendStylesheet($this->assetUrl('css/resource-page-blocks.css', 'Omeka'));
 $this->htmlElement('body')->appendAttribute('class', 'item resource show');
 $embedMedia = $this->siteSetting('item_media_embed', false);
 $itemMedia = $item->media();
 $showLayout = $this->themeSetting('show_layout');
 $mediaDisplay = $this->themeSetting('media_display');
-$galleryDisplay = (isset($mediaDisplay)) ? strpos($mediaDisplay, 'gallery') : false;
-$tracksPresent = $this->DetectTracks($itemMedia);
+$this->headLink()->appendStylesheet($this->assetUrl('css/resource-page-blocks.css', 'Omeka'));
 
-if ($galleryDisplay) {
-    
-    $imageMedia = [];
-    $embedMedia = ['audio/mpeg', 'oEmbed'];
-    $otherMedia = [];
-    $iiifMedia = [];
-    $whitelist = ['image/bmp', 'image/gif', 'image/jpeg', 'image/png', 'image/svg+xml'];
-    foreach ($itemMedia as $media) {
-        $mediaType = $media->mediaType();
-        $mediaRenderer = $media->renderer();
-        if (strpos($mediaRenderer, 'iiif') !== false) {
-            $iiifMedia[] = $media;
-        }
-        elseif ((strpos($mediaType, 'audio/mpeg') !== false) || (strpos($mediaRenderer, 'oEmbed') !== false)) {
-            $embedMedia[] = $media;
-        }
-        elseif (strpos($mediaType, 'image') !== false) {
-            $imageMedia[] = $media;
-        }
-         else {
-            $otherMedia[] = $media;
-        }
-    }
-}
+$fullWidthMainBlockContent = $this->resourcePageBlocks($item, 'full_width_main');
+$fullWidthMainHasBlocks = $fullWidthMainBlockContent->hasBlocks();
+$mainWithSidebarBlockContent = $this->resourcePageBlocks($item);
+$mainWithSidebarHasBlocks= $mainWithSidebarBlockContent->hasBlocks();
+$leftSidebarBlockContent = $this->resourcePageBlocks($item, 'left');
+$leftSidebarHasBlocks = $leftSidebarBlockContent->hasBlocks();
+$rightSidebarBlockContent = $this->resourcePageBlocks($item, 'right');
+$rightSidebarHasBlocks = $rightSidebarBlockContent->hasBlocks();
+
+$filterLocale = (bool) $this->siteSetting('filter_locale_values');
+$lang = $this->lang();
 ?>
 
-<div class="resource-title padding-bottom-1 large-padding-bottom-2">
-<?php echo $this->pageTitle($item->displayTitle(), 2); ?>
+<div class="resource-title">
+<?php echo $this->pageTitle($item->displayTitle(null, ($filterLocale ? $lang : null)), 2); ?>
 <h3 class="label"><?php echo $translate('Item'); ?></h3>
 </div>
 
-<div class="grid-x full-width-css">
-<?php if ($galleryDisplay): ?>
-    <?php if ((count($iiifMedia) > 0) || (count($imageMedia) > 0)): ?>
-        <div id="itemfiles" class="large-padding-horizontal-2 xlarge-padding-horizontal-3 <?php echo $mediaDisplay; ?>">
-            <?php echo $this->mirador($item); ?>
-        </div>
-    <?php elseif (strpos($mediaRenderer, 'youtube') !== false): ?>
-        <div id="itemfiles" class="<?php echo $mediaDisplay; ?>">
-            <div class="video-wrap no-margin">
-                <div class="responsive-embed">
-                    <?php echo $media->render(); ?>
-                </div>
-            </div>
-        </div>
-    <?php elseif (count($embedMedia) > 0): ?>
-        <div id="itemfiles" class="<?php echo $mediaDisplay; ?>">
-            <?php echo $media->render(); ?>
-        </div>
-
-    </div>
-    
-    <?php endif; ?>
-    <?php else: ?>
-    <?php if (count($itemMedia) > 0): ?>
-    <div class="<?php echo ($embedMedia) ? 'media-embeds' : 'media-list' ?>">
-    <?php foreach ($itemMedia as $media): ?>
-        <?php echo ($embedMedia) ? $media->render() : $media->linkPretty(); ?>
-    <?php endforeach; ?>
-    </div>
-<?php endif; ?>
-
-
-<?php endif; ?>
-
-<div id="resource-values" class="padding-horizontal-1 large-padding-horizontal-0 large-padding-right-1 <?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
+<div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
-    <?php echo $item->displayValues(); ?>
-    <?php $itemSets = $item->itemSets(); ?>
-    <?php if (count($itemSets) > 0): ?>
-        <dl>
-            <div class="property">
-                <dt><?php echo $translate('Item sets'); ?></dt>
-                <div class="values">
-                    <?php foreach ($itemSets as $itemSet): ?>
-                        <dd class="value"><a href="<?php echo $escape($itemSet->url()); ?>"><?php echo $itemSet->displayTitle(); ?></a></dd>
-                   <?php endforeach; ?>
-                </div>
-            </div>
-        </dl>
+    <?php if ($fullWidthMainHasBlocks): ?>
+    <div class="full-width-main">
+        <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
+    </div>
     <?php endif; ?>
+
+    <?php if ($mainWithSidebarHasBlocks || $leftSidebarHasBlocks || $rightSidebarHasBlocks): ?>
     
-    <?php if ($galleryDisplay || $mediaDisplay == 'single'): ?>
-        <?php $mediaList = ($galleryDisplay) ? $otherMedia : $itemMedia; ?>
-    <?php endif; ?>
-    
-    
-    
-    <?php if (($this->siteSetting('show_attached_pages', true)) && ($sitePages = $item->sitePages($site->id()))): ?>
-        <dl>
-             <div class="property">
-                <dt><?php echo $translate('Site pages'); ?></dt>
-                <div class="values">
-                    <?php foreach ($sitePages as $sitePage): ?>
-                        <dd class="value"><?php echo $sitePage->link($sitePage->title()); ?></dd>
-                    <?php endforeach; ?>
-                </div>
-            </div>
-        </dl>
-    <?php endif; ?>
-            
-    <?php
-        $page = $this->params()->fromQuery('page', 1);
-        $property = $this->params()->fromQuery('property');
-        $subjectValues = $item->displaySubjectValues($page, 25, $property);
+    <?php 
+    if ($leftSidebarHasBlocks && $rightSidebarHasBlocks) {
+        $sidebarWidth = '3';
+        $mainWidth = '6';
+    } else {
+        $sidebarWidth = '4';
+        $mainWidth = '8';
+    }
     ?>
-    <?php if ($subjectValues): ?>
-        <div id="item-linked">
-            <h3><?php echo $translate('Linked resources'); ?></h3>
-            <?php echo $subjectValues; ?>
+    
+    <div class="grid-x grid-margin-x">
+        <?php if ($leftSidebarHasBlocks): ?>
+        <div class="left-sidebar cell medium-<?php echo $sidebarWidth; ?>">
+            <?php echo $leftSidebarBlockContent->getBlocks(); ?>
         </div>
         <?php endif; ?>
-        
-        <?php $this->trigger('view.show.after'); ?>
-    </div> 
+
+        <?php if ($mainWithSidebarHasBlocks): ?>
+        <div class="main-with-sidebar cell medium-<?php echo $mainWidth; ?>">
+            <?php echo $mainWithSidebarBlockContent->getBlocks(); ?>
+        </div>
+        <?php endif; ?>
+
+        <?php if ($rightSidebarHasBlocks): ?>
+        <div class="right-sidebar cell medium-<?php echo $sidebarWidth; ?>">
+            <?php echo $rightSidebarBlockContent->getBlocks(); ?>
+        </div>
+        <?php endif; ?>
+    </div>
+    <?php endif; ?>
+
+    <?php $this->trigger('view.show.after'); ?>
 </div>
