Revised IIIF embed for BlockPlus Resource with Text

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -664,7 +664,7 @@ figcaption.orbit-caption.caption p {
   .media-text .right {
   float: unset;
   margin: 0;
-  max-width: 100%;
+  width: 100%;
   }
  
   /*Revise order for 'right' items*/
