--- a/view/common/block-layout/resource-text-seadragon.phtml
+++ b/view/common/block-layout/resource-text-seadragon.phtml
@@ -28,7 +28,7 @@ $lang = $filterLocale ? $this->lang() : null;
     </div>
     <?php endif; ?>
     <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 xlarge-7">
-    <div class="attachments">
+    <div class="attachments resource-text-openseadragon">
             <?php
             foreach ($attachments as $attachment):
                 $render = null;
